--- a/HackerNews/app/src/main/res/layout/list_item.xml
+++ b/HackerNews/app/src/main/res/layout/list_item.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/title"
@@ -18,6 +15,4 @@
         android:textSize="25sp"
         tools:text="An article title that can take one or two lines" ></TextView>
 
-
-
-</LinearLayout>
+</FrameLayout>
