--- a/HackerNews/app/src/main/res/layout/list_item_progress.xml
+++ b/HackerNews/app/src/main/res/layout/list_item_progress.xml
@@ -2,18 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="wrap_content">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:layout_gravity="center" />
+        android:layout_margin="40dp"
+        android:layout_gravity="center"
+        android:indeterminate="true" ></ProgressBar>
 
 </FrameLayout>
