--- a/HackerNews/app/src/main/res/layout/article.xml
+++ b/HackerNews/app/src/main/res/layout/article.xml
@@ -7,15 +7,18 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-
-
+        android:text="TextView"
+        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:lines="1"
+        android:layout_marginLeft="10dp"
+        android:ellipsize="end"/>
+    
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:orientation="vertical">
-
 
         <WebView
             android:id="@+id/webView"
@@ -23,7 +26,4 @@
             android:layout_height="wrap_content" />
 
     </RelativeLayout>
-
-
-
 </LinearLayout>
