--- a/HackerNews/app/src/main/res/layout/article.xml
+++ b/HackerNews/app/src/main/res/layout/article.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,8 +12,15 @@
         android:textColor="@android:color/black"
         android:lines="1"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
         android:ellipsize="end"/>
-    
+    <ProgressBar
+        android:id="@+id/progress2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_gravity="center" />
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,7 +30,9 @@
         <WebView
             android:id="@+id/webView"
             android:layout_width="wrap_content"
+            android:layout_marginTop="30dp"
             android:layout_height="wrap_content" />
 
     </RelativeLayout>
-</LinearLayout>
+
+</FrameLayout>
