--- a/HackerNews/app/src/main/res/layout/list_item.xml
+++ b/HackerNews/app/src/main/res/layout/list_item.xml
@@ -11,6 +11,7 @@
         android:layout_margin="10dp"
         android:ellipsize="end"
         android:gravity="center_vertical"
+        android:textColor="@android:color/black"
         android:lines="2"
         android:textSize="25sp"
         tools:text="An article title that can take one or two lines" ></TextView>
