--- a/HackerNews/app/src/main/res/layout/list_item.xml
+++ b/HackerNews/app/src/main/res/layout/list_item.xml
@@ -14,6 +14,6 @@
         android:textColor="@android:color/black"
         android:lines="2"
         android:textSize="25sp"
-        tools:text="An article title that can take one or two lines" ></TextView>
+        tools:text="An article title that can take one or two lines" />
 
 </FrameLayout>
